small changes esu 2017

--- a/talks/esu2017.html
+++ b/talks/esu2017.html
@@ -281,7 +281,7 @@
 					<div style="font-size:0.7em">
 					<p>Slides: <a href="https://elespdn.github.io/talks/esu2017.html">https://elespdn.github.io/talks/esu2017.html</a></p>
 					<p><i>elena.spadini@unil.ch</i></p>
-					<p><a href="hhtp://elenaspadini.com" target="_blank">elenaspadini.com</a></p>
+					<p>Elena Spadini | Sonia Tempestini					
 					</div>
 				</section>
 
