talk lausanne master histoire du livre

--- a/talks/aiucd2016.html
+++ b/talks/aiucd2016.html
@@ -159,7 +159,7 @@
 					</section>
 					
 					<section>
-						<p>Distanza tra tutti i testimoni<p>
+						<p>Distanza tra tutti i testimoni</p>
 						<img src="images/aiucd-ests-2016/map4.png"/>
 					</section>
 				</section>
