most done Introduction édition numeriques Histoire du livre

--- a/talks/index.html
+++ b/talks/index.html
@@ -30,6 +30,7 @@
 			<ul>
 				<li><a href="labMonaci1-xmlTei.html">Intro TEI</a></li>				
 				<li><a href="codeCollation-unit2part2.html#/">Code and Collation workshop</a></li>
+				<li><a href="20171011_editions_numeriques.html">Introduction aux &233;dition num&233;riques</a></li>
 			</ul>
 
 			<p>More talks at <a href="http://elenaspadini.com/presentations.html">elenaspadini.com/presentation<s/a></p>
