small update Histoire du livre - attenzione, cambiare materials con materialsRoud

--- a/talks/20171011_editions_numeriques.html
+++ b/talks/20171011_editions_numeriques.html
@@ -186,7 +186,7 @@
 				</section>
 
 				<section>
-					<h2>Recap</h2>
+					<h2>R&#233;sum&#233;</h2>
 					<ul>
 						<li class="fragment">Éditions num&#233;riques</li>
 						<li class="fragment">Num&#233;rique ≠ num&#233;ris&#233;e</li>
