--- a/talks/materials/journal-img-editio.html
+++ b/talks/materials/journal-img-editio.html
@@ -96,7 +96,7 @@
       &lt;body&gt;
          &lt;p&gt;
             <span class="hicode">&lt;lb/&gt;</span>La pluie a duré toute la nuit. 
-            &lt;lb/&gt;Au matin, pays lavé, assombri et décoloré tout ensemble 
+            Au matin, &lt;lb/&gt;pays lavé, assombri et décoloré tout ensemble 
             &lt;lb/&gt;sous le soleil blanc. 
             &lt;choice&gt;
                <span class="hicode">&lt;abbr&gt;M.&lt;/abbr&gt;
@@ -118,7 +118,7 @@
             &lt;choice&gt;
                &lt;abbr&gt;M.&lt;/abbr&gt;
                &lt;expan&gt;Madeleine&lt;/expan&gt;
-            &lt;/choice&gt; est descendue &lt;lb/&gt;à Moudon à I h, et remonte à 6 h ½. Je pars pour
+            &lt;/choice&gt; est descendue &lt;lb/&gt;à Moudon à 1 h, et remonte à 6 h ½. Je pars pour
             &lt;lb/&gt;
             &lt;choice&gt;
                <span class="hicode">&lt;abbr&gt;V.&lt;/abbr&gt;
@@ -172,7 +172,7 @@
 		<span class="division">&#129171;</span>
 		
 		<div class="section">
-			<h1 style="text-align: center"><a href="../20171011_editions_numeriques.html#/20">Recap</a></h1>
+			<h1 style="text-align: center"><a href="../20171011_editions_numeriques.html#/20">Résumé</a></h1>
 		</div>
 
 		
