--- a/talks/20171011_editions_numeriques.html
+++ b/talks/20171011_editions_numeriques.html
@@ -197,7 +197,7 @@
 				</section>
 
 				<section>
-					<p class="fragment">Une &#233;dition CRITIQUE doit avoir des principes d'&#233;dition clairs et pertinents</p>
+					<p class="fragment">Une &#233;dition CRITIQUE doit avoir des principes d'&#233;dition (pour l'&#233;tablissement du texte) clairs et pertinents</p>
 					<p class="fragment">peu importe si num&#233;rique ou pas !</p>
 				</section>
 				
