--- a/talks/esu2017.html
+++ b/talks/esu2017.html
@@ -266,7 +266,8 @@
 					<section>
 						<h2>What I am learning</h2>
 						<ul>
-							<li>humanist + digital humanist = productive discussion</li>
+							<li>humanist + digital = productive discussion</li>
+							<li>questioning methodology</li>
 							<li>logistic issues should be considered</li>
 						</ul>
 					</section>
