jupyter collation seance master

--- a/talks/20171026_master_genetique.html
+++ b/talks/20171026_master_genetique.html
@@ -55,21 +55,18 @@
 				<section>
 					<h2><a href="http://www.beckettarchive.org/" target="_blank">« Samuel Beckett Digital Manuscript Project »</a></h2>
 					<br/><br/>
-					<p>Digital + Paper | Beckett Digital Library |</p>
+					<p>Digital + Paper | Text + Facsimile | Compare sentences</p>
 				</section>
 				
+				
 				<section>
-					<h3>Exemples d'&#233;dition</h3>
+					<h3>Outils de collation</h3>
+					<br/>
+					<p>Parmi les plus utilisés ...</p> 
 					<ul>
-						<li class="fragment">Leo Jansen, Hans Luijten, Nienke Bakker (eds.) (2009), <i><a href="http://vangoghletters.org">Vincent van Gogh - The Letters.</a></i> Version: December 2010. Amsterdam &amp; The Hague: Van Gogh Museum &amp; Huygens ING</li>
-						<li class="fragment"><a href="http://shelleygodwinarchive.org/"><i>The Shelley-Godwin Archive</i></a></li>
+						<li>Juxta Commons</li>
+						<li>CollateX</li>
 					</ul>
-				</section>	
-
-				<section>
-					<h3>Édition num&#233;rique</h3>
-					<br/> 
-					<p>Une &#233;dition num&#233;rique ne peut pas être convertie dans une &#233;dition papier sans une perte substantielle de contenu ou de fonctionnalit&#233;</p>
 				</section>
 
 				<section id="digital">
