collation pres de la tombe de F.

--- a/talks/20171026_master_genetique.html
+++ b/talks/20171026_master_genetique.html
@@ -84,7 +84,7 @@
 				<section>
 					<h3>Gustave Roud, Dossier « Près de la tombe de F. »</h3>
 					<ul>
-						<li><a target="_blank">Collation</a> des textes avec CollateX</li>
+						<li><a href="http://nbviewer.jupyter.org/github/elespdn/elespdn.github.io/blob/master/talks/jupyternotebook/20171026masterUNIL/RoudCollateXPresTombe.ipynb" target="_blank">Collation</a> des textes avec CollateX (division mots)</li>
 					</ul>
 				</section>
 				
