small update slides

--- a/talks/20171026_master_genetique.html
+++ b/talks/20171026_master_genetique.html
@@ -82,7 +82,8 @@
 				</section>
 
 				<section>
-					<h3>Gustave Roud, Dossier « Près de la tombe de F. »</h3>
+					<h3>Gustave Roud, Dossier <br/>« Près de la tombe de F. »</h3>
+					<br/>
 					<ul>
 						<li><a href="http://nbviewer.jupyter.org/github/elespdn/elespdn.github.io/blob/master/talks/jupyternotebook/20171026masterUNIL/RoudCollateXPresTombe.ipynb" target="_blank">Collation</a> des textes avec CollateX</li>
 					</ul>
