small updates slides

--- a/talks/20171011_editions_numeriques.html
+++ b/talks/20171011_editions_numeriques.html
@@ -182,7 +182,8 @@
 
 				<section>
 					<h3>Le journal de Gustave Roud</h3>
-					<a href="materials/journal-img-editio.html"><img src="images/20171011_editions_numeriques/19330730.png" width="60%" /></a>
+					<a href="materials/20171011_editions_numeriques/journal-img-editio.html"><img src="images/20171011_editions_numeriques/19330730.png" width="40%" /></a>
+					<p>Cliquer sur l'image</p>
 				</section>
 
 				<section>
