--- a/talks/docChanges.html
+++ b/talks/docChanges.html
@@ -1,64 +1,31 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<!doctype html>
+<html>
 
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 		<title>DocChanges</title>
 
-		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+		<link rel="stylesheet" href="css/reveal.css">
+		<link rel="stylesheet" href="css/theme/white.css">
 
+		<!-- Theme used for syntax highlighting of code -->
+		<link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<meta name="language" content="English, Italian" />
-		<meta name="description" content="Annotating document changes" />
-		<meta name="developer" content="Hakim El Hattab" />
-		<meta name="author" content="Elena Spadini" />
-		<meta name="revisit-after" content="30 days" />
-		<meta name="rating" content="General" />
-		<meta name="robots" content="index, follow" />
-
-		<!--Per la visione su dispositivi mobili -->
-
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-		<meta name="viewport"
-			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
-
-		<!-- css -->
-
-		<link rel="stylesheet" href="css/reveal.min.css" type="text/css" />
-		<link rel="stylesheet" href="css/theme/serif.css" id="theme" type="text/css" />
-
-
-
-		<!-- For syntax highlighting -->
-
-		<link rel="stylesheet" href="lib/css/github.css" type="text/css" />
-
-
-		<!-- For printing
-If the query includes 'index.html/?print-pdf', use the PDF print sheet 
-Para imprimir a PDF: con Chrome queda mejor, aunque también funciona con Safari. Usar la función de "guardar" del navegador (coge también los enlaces) "vista previa en PDF", no-->
-
-		<link rel="stylesheet" href="css/print/pdf copia.css" type="text/css" media="print" />
-
-		<script type="application/javascript">
-	document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print" />' );
-</script>
-
-
-		<!--[if lt IE 9]>
-<script src="lib/js/html5shiv.js" type="text/javascript"></script>
-<![endif]-->
-
+		<!-- Printing and PDF exports -->
+		<script>
+			var link = document.createElement( 'link' );
+			link.rel = 'stylesheet';
+			link.type = 'text/css';
+			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
+			document.getElementsByTagName( 'head' )[0].appendChild( link );
+		</script>
 
 	</head>
 	<!--FIN HEAD-->
 
 	<body>
-		<!--START BODY-->
-
 		<div class="reveal">
 			<div class="slides">
 				<!-- da qui come diapositiva -->
@@ -93,16 +60,16 @@ Para imprimir a PDF: con Chrome queda mejor, aunque también funciona con Safari
 					<table>
 						<tr>
 							<td>
-								<a href="others/Commedia-riccardiano.html" target="_blank"><img
+								<a href="images/docChanges/Commedia-riccardiano.html" target="_blank"><img
 										width="100%" height="25%"
-										src="imagen/Commedia-riccardiano.jpg" /></a> XIV century </td>
+										src="images/docChanges/Commedia-riccardiano.jpg" /></a> XIV century </td>
 							<td>
-								<a href="others/Commedia-cologny.html" target="_blank"><img width="90%"
-										height="19%" src="imagen/Commedia-cologny.jpg" /></a> XV
+								<a href="images/docChanges/Commedia-cologny.html" target="_blank"><img width="90%"
+										height="19%" src="images/docChanges/Commedia-cologny.jpg" /></a> XV
 								century </td>
 							<td>
-								<a href="others/Commedia-imola.html" target="_blank"><img width="100%"
-										height="25%" src="imagen/Commedia-imola.jpg" /></a> XV
+								<a href="images/docChanges/Commedia-imola.html" target="_blank"><img width="100%"
+										height="25%" src="images/docChanges/Commedia-imola.jpg" /></a> XV
 								century </td>
 						</tr>
 					</table>
@@ -111,9 +78,9 @@ Para imprimir a PDF: con Chrome queda mejor, aunque también funciona con Safari
 					<table>
 						<tr>
 							<td>
-								<a href="Commedia-riccardiano.html" target="_blank"><img
+								<a href="images/docChanges/Commedia-riccardiano.html" target="_blank"><img
 										width="130px" height="200px"
-										src="imagen/Commedia-riccardiano.jpg" /></a>
+										src="images/docChanges/Commedia-riccardiano.jpg" /></a>
 							</td>
 							<td style="vertical-align:middle">&emsp;&emsp;Witness 1:&emsp;<i>Taciti
 									soli <span style="background:greenyellow">asença</span>
@@ -121,8 +88,8 @@ Para imprimir a PDF: con Chrome queda mejor, aunque también funciona con Safari
 						</tr>
 						<tr>
 							<td>
-								<a href="Commedia-cologny.html" target="_blank"><img width="130px"
-										height="200px" src="imagen/Commedia-cologny.jpg" /></a>
+								<a href="images/docChanges/Commedia-cologny.html" target="_blank"><img width="130px"
+										height="200px" src="images/docChanges/Commedia-cologny.jpg" /></a>
 							</td>
 							<td style="vertical-align:middle">&emsp;&emsp;Witness 2:&emsp;<i>Taciti
 									soli <span style="background:greenyellow">sança</span>
@@ -130,8 +97,8 @@ Para imprimir a PDF: con Chrome queda mejor, aunque también funciona con Safari
 						</tr>
 						<tr>
 							<td>
-								<a href="Commedia-imola.html" target="_blank"><img width="130px"
-										height="200px" src="imagen/Commedia-imola.jpg" /></a>
+								<a href="images/docChanges/Commedia-imola.html" target="_blank"><img width="130px"
+										height="200px" src="images/docChanges/Commedia-imola.jpg" /></a>
 							</td>
 							<td style="vertical-align:middle">&emsp;&emsp;Witness 3:&emsp;<i>Taciti
 									soli <span style="background:greenyellow">et sença</span>
@@ -210,11 +177,11 @@ Para imprimir a PDF: con Chrome queda mejor, aunque también funciona con Safari
 					</ul>
 				</section>
 				<section>
-					<h2><a href="others/case1-table.html" target="_blank">Case 1</a></h2>
+					<h2><a href="images/docChanges/case1-table.html" target="_blank">Case 1</a></h2>
 				</section>
 				<section>
 					<h2>Case 2</h2>
-					<img width="120%" src="imagen/alignment_manuale.png" />
+					<img width="120%" src="images/docChanges/alignment_manuale.png" />
 				</section>
 				<section>
 					<h2><a
@@ -222,7 +189,7 @@ Para imprimir a PDF: con Chrome queda mejor, aunque también funciona con Safari
 							target="_blank">Case 2</a></h2>
 				</section>
 				<section>
-					<h2>Annotations are stored in a <a href="others/database.html" target="_blank"
+					<h2>Annotations are stored in a <a href="images/docChanges/database.html" target="_blank"
 							>database</a>.</h2>
 				</section>
 				<section style="width:120%">
@@ -258,34 +225,25 @@ Para imprimir a PDF: con Chrome queda mejor, aunque también funciona con Safari
 		</div>
 		<!--<//REVEAL> y FIN DIAPOSITIVAS-->
 
-		<!--Scripts de las diapositivas-->
 
-		<script src="lib/js/head.min.js" type="text/javascript"></script>
-		<script src="js/reveal.min.js" type="text/javascript"></script>
-
-		<!--Modificación de transiciones, mostrar controles y barra de estado en .extras.js-->
-
-		<script src="js/extras.js" type="text/javascript"></script>
-
-		<!--Od tutaj: afecta a TODAS las diapositivas -->
-
-		<!-- 
-	<div class="footer">
 		
-		<p style="font-size:20px;padding-bottom:30px;color:green;text-alignement:center"> alignment  &#8594;   Collation   &#8594;   Annotation &#8594; Analysis</p>
-		
-	</div>	
- -->
-		<div class="footer">
-			<p> Elena Spadini · DiXiT · Huygens ING</p>
-		</div>
-		<!--FIN FOOTER FIRMA-->
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.js"></script>
 
-		<!--ESQUINAS MENU en TODAS DIAS-->
+		<script>
+			// More info https://github.com/hakimel/reveal.js#configuration
+			Reveal.initialize({
+				history: true,
 
-		<!--<div id="menu">
-   <a href="#/indice"><img src="imagen/indices.png" title="Índice"/></a> 
-</div>   FIN INDICE -->
+				// More info https://github.com/hakimel/reveal.js#dependencies
+				dependencies: [
+					{ src: 'plugin/markdown/marked.js' },
+					{ src: 'plugin/markdown/markdown.js' },
+					{ src: 'plugin/notes/notes.js', async: true },
+					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+				]
+			});
+		</script>
 
 	</body>
 </html>
