update slides cuso

--- a/talks/20180524_cuso_recueil.html
+++ b/talks/20180524_cuso_recueil.html
@@ -77,25 +77,25 @@
 				<section>
 					<ul style="font-size: 0.6em">
 
-						<li><span class="blue1">Recueil disparate &#129078; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Feuillets</i>, Lausanne, Mermod, 1929.</li>
+						<li><span class="blue1">Recueil disparate &#8594; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Feuillets</i>, Lausanne, Mermod, 1929.</li>
 						<br/>
 
-						<li><span class="blue2">Album &#129078; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Haut-Jorat</i>, Lausanne, Editions des Terreaux, 1949.</li>
+						<li><span class="blue2">Album &#8594; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Haut-Jorat</i>, Lausanne, Editions des Terreaux, 1949.</li>
 						<br/>
 
-						<li><span class="blue3">Recueil chronologique &#129078; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Petit traité de la marche en plaine suivi de lettres, dialogues et morceaux</i>, Lausanne, Mermod, 1932.</li>
-						<li><span class="blue3">Recueil chronologique &#129078; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Le Repos du cavalier</i>, Lausanne, Bibliothèque des Arts, 1958.</li>
+						<li><span class="blue3">Recueil chronologique &#8594; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Petit traité de la marche en plaine suivi de lettres, dialogues et morceaux</i>, Lausanne, Mermod, 1932.</li>
+						<li><span class="blue3">Recueil chronologique &#8594; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Le Repos du cavalier</i>, Lausanne, Bibliothèque des Arts, 1958.</li>
 						<br/>
 
 
-						<li><span class="blue4">Recueil configuré &#129078; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Pour un moissonneur</i>, Lausanne, Mermod, 1941.</li>
-						<li><span class="blue4">Recueil configuré &#129078; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Air de la solitude</i>, Lausanne, Mermod, 1945.</li>
-						<li><span class="blue4">Recueil configuré &#129078; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Campagne perdue</i>, Lausanne, Bibliothèque des Arts, 1972.</li>
+						<li><span class="blue4">Recueil configuré &#8594; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Pour un moissonneur</i>, Lausanne, Mermod, 1941.</li>
+						<li><span class="blue4">Recueil configuré &#8594; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Air de la solitude</i>, Lausanne, Mermod, 1945.</li>
+						<li><span class="blue4">Recueil configuré &#8594; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Campagne perdue</i>, Lausanne, Bibliothèque des Arts, 1972.</li>
 						<br/>
 
-						<li><span class="blue5">Poéme-livre &#129078; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Adieu</i>, Lausanne, Au Verseau, 1927.</li>
-						<li><span class="blue5">Poéme-livre &#129078; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Essai pour un paradis</i>, Lausanne, Mermod, 1932.</li>
-						<li><span class="blue5">Poéme-livre &#129078; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Requiem</i>, Lausanne, Payot, 1967.</li>
+						<li><span class="blue5">Poème-livre &#8594; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Adieu</i>, Lausanne, Au Verseau, 1927.</li>
+						<li><span class="blue5">Poème-livre &#8594; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Essai pour un paradis</i>, Lausanne, Mermod, 1932.</li>
+						<li><span class="blue5">Poème-livre &#8594; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><i>Requiem</i>, Lausanne, Payot, 1967.</li>
 						
 						
 					</ul>
