updated slides comhum

--- a/talks/20180604_comhum.html
+++ b/talks/20180604_comhum.html
@@ -62,9 +62,8 @@
 					<br/>
 					<ul>
 						<li><i>Lancelot en prose</i> (13<sup>th</sup> century)</li>
-						<li><i>Pastourelles</i> (12<sup>th</sup> - 13<sup>th</sup> century)</li>
-						<li>Giacomo Leopardi, <i>Alla luna</i> (1835)</li>
-						<li>Emilio Gadda, <i>Eros e Priapo</i> (1967)</li>
+						<li>Giacomo Leopardi, <i>Alla luna</i> (1820)</li>
+						<li>Emilio Gadda, <i>Eros e Priapo</i> (1945)</li>
 					</ul>
 				</section>
 
@@ -200,6 +199,9 @@
 				</section>
 
 				<section data-background-image="images/20180604_comhum/fig13.png" data-background-size="60%">
+				</section>
+
+				<section data-background-image="images/20180604_comhum/fig13_zoom.jpg">
 				</section>
 
 				<section>
@@ -373,8 +375,23 @@
 					<img src="images/20180604_comhum/modelOntology.png">
 				</section>
 
+				<section data-background-image="images/20180604_comhum/graphData.jpg">
+				</section>
 
-<section data-background-image="images/20180604_comhum/pattern.jpg">
+				<section data-background-image="images/20180604_comhum/graphVariantsChange.jpg">
+				</section>
+
+				<section data-background-image="images/20180604_comhum/graphSelectedVariantsTransposition.jpg">
+				</section>
+
+				<section data-background-image="images/20180604_comhum/graphSelectedVariantsSubstitutionLinguistic.jpg" data-background-size="85%">
+				</section>
+
+				<section data-background-image="images/20180604_comhum/graphSelectedVariantsCorrections.jpg" data-background-size="90%">
+				</section>
+
+
+				<section data-background-image="images/20180604_comhum/pattern.jpg">
 				</section>
 
 
