slides in io profile

--- a/io/index.html
+++ b/io/index.html
@@ -192,6 +192,13 @@
                 <ul style="list-style-type:none">
                     <li>
                         <div>
+                            <p><span class="slidetitle">Exercises in modelling: textual variants</span>. 2018 June - <a href="http://wp.unil.ch/llist/event/comhum2018/" target="_blank">Workshop on Computational Methods in the Humanities 2018 (COMHUM 2018)</a>. Conceptual model and implementations in different data-formats for describing and annotating textual variants.
+                            <a class="btn btn-outline-secondary" href="https://elespdn.github.io/talks/20180604_comhum.html#/" target="_blanche" role="button">View slides →</a></p>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div>
                             <p><span class="slidetitle">A spoonful of sugar: TEI Publisher</span>. 2017 January - Dixit Workshop <a href="http://aiucd2017.aiucd.it/?page_id=994" target="_blank">The educational and social impact of Digital Scholarly Edition</a>. A section of the workshop was devoted to digital tools used in educational contexts. This paper focuses on <a href="http://exist-db.org/exist/apps/homepage/index.html">eXist-DB</a> (<a href="http://teipublisher.com/index.html">TEI Publisher</a>) and how it has been used to publish the data produced during the course <a href="http://elenaspadini.com/teach.html">Laboratorio Monaci</a>.
                             <a class="btn btn-outline-secondary" href="https://elespdn.github.io/talks/dixitdidacticRome2017#/" target="_blanche" role="button">View slides →</a></p>
                         </div>
