presentazione fbk trento in progress

--- a/talks/20181005_fbk.html
+++ b/talks/20181005_fbk.html
@@ -44,7 +44,7 @@
 					<br/><br/><br/><br/><br/><br/><br/><br/>
 					<div style="background-color:rgba(255,255,255,0.5)">
 						<p><b>Edizioni digitali di plastilina: <br/>modellare i dati da Dante ad oggi</b></p>
-						<p style="font-size: 0.7em">Elena Spadini (Université de Lausanne). FBK, 5 ottobre 2018</p>
+						<p style="font-size: 0.7em">FBK, 5 ottobre 2018. Elena Spadini (Université de Lausanne)</p>
 					</div>
 				</section>
 
@@ -73,9 +73,9 @@
 				</section>
 
 				<section>
-					<h2>oggetti complessi e disomogenei</h2>
-					<h2>da modellare ...</h2>
-					<h2>perché modellare?</h2>
+					<p>oggetti complessi e disomogenei</p>
+					<p>da modellare ...</p>
+					<p>perché modellare?</p>
 				</section>
 
 				<section>
@@ -113,11 +113,69 @@
 
 				<section data-background-image="images/20181005_fbk/commediaBoccaccio_conceptual.png" data-background-size="contain"></section>
 
-				
+				<section data-background-image="images/20181005_fbk/commediaBoccaccio_searchRyhme.png" data-background-size="contain"></section>
+
+				<section data-background-image="images/20181005_fbk/commediaBoccaccio_searchRhymeResults.png" data-background-size="contain"></section>
+
+				<section data-background-image="images/20181005_fbk/commediaBoccaccio_searchInversion.png" data-background-size="contain"></section>
+
+				<section data-background-image="images/20181005_fbk/commediaBoccaccio_searchInversionResults.png" data-background-size="contain"></section>
+
+				<section data-background-image="images/20181005_fbk/commediaBoccaccio_marginsAlternatives.png" data-background-size="contain"></section>
+
+				<section data-background-image="images/20181005_fbk/commediaBoccaccio_conceptual.png" data-background-size="contain"></section>
+
+
+				<section>
+					La <i>Commedia</i> di Boccaccio
+					<br/><br/><br/>
+					<ul>
+						<li>copista e autore  &rarr;  categorie <i>ad hoc</i> per le varianti</li>
+						<br/>
+						<li>dati strutturati  &rarr;  base dati relazionale</li>
+					</ul>
+				</section>
 
 				
 				<section data-background-image="images/20181005_fbk/monaci_archiveMonaci.png" data-background-size="contain">
 				</section>
+
+				<section>
+					<img src="images/20181005_fbk/monaci_websiteHome.png">
+				</section>
+
+				<section data-background-image="images/20181005_fbk/monaci_greek19570325.jpg" data-background-size="contain">
+				</section>	
+
+				<section data-background-image="images/20181005_fbk/monaci_ramon1.jpg" data-background-size="contain">
+				</section>	
+
+				<section data-background-image="images/20181005_fbk/monaci_websiteLettera.png" data-background-size="contain">
+				</section>
+
+				<section data-background-image="images/20181005_fbk/monaci_websitePersone.png" data-background-size="contain">
+				</section>	
+
+				<section>
+					<img src="images/20181005_fbk/DeGasperi_CriteriEditoriali.png">
+				</section>	
+
+				<section>
+					Laboratorio Monaci
+					<br/><br/><br/>
+					<ul>
+						<li>epistolario  &rarr;  annotazione, entità, nomi</li>
+						<br/>
+						<li>rappresentazione lineare + markup  &rarr;  XML/TEI</li>
+						<br/>
+						<li>corso di codifica del testo</li>
+					</ul>
+				</section>					
+
+
+
+
+
 
 				<section data-background-image="images/20181005_fbk/roud_mixMaterials.jpg" data-background-size="contain">
 				</section>
