--- a/talks/20181005_fbk.html
+++ b/talks/20181005_fbk.html
@@ -41,10 +41,12 @@
 							
 				
 				<section data-background-image="images/20181005_fbk/plastilinaRoom.jpg" data-background-opacity="0.7" data-background-size="contain">
-					<br/><br/><br/><br/><br/><br/><br/><br/>
+					<br/><br/><br/><br/><br/><br/><br/>
 					<div style="background-color:rgba(255,255,255,0.5)">
 						<p><b>Edizioni digitali di plastilina: <br/>modellare i dati da Dante ad oggi</b></p>
-						<p style="font-size: 0.7em">FBK, 5 ottobre 2018. Elena Spadini (Université de Lausanne)</p>
+						<p>FBK, 5 ottobre 2018</p>
+							<p style="font-size: 0.7em">Elena Spadini (Université de Lausanne)
+							<br/>elespdn.github.io/talks/20181005_fbk</p>
 					</div>
 				</section>
 
@@ -105,9 +107,7 @@
 				<section data-background-image="images/20181005_fbk/magazzino2.png" data-background-size="contain">
 				</section>
 
-				<section>
-					<img class="fragment" data-fragment-index="1" src="images/20181005_fbk/scatolaStrana2.jpg">
-					<img class="fragment" data-fragment-index="2" src="images/20181005_fbk/scatolaStrana1.jpg">
+				<section data-background-image="images/20181005_fbk/magazzino3.png" data-background-size="contain">
 				</section>
 
 				<section>
@@ -182,6 +182,9 @@
 				<section data-background-image="images/20181005_fbk/monaci_ramon1.jpg" data-background-size="contain">
 				</section>	
 
+				<section data-background-image="images/20181005_fbk/monaci_xmlLettera.png" data-background-size="contain">
+				</section>
+
 				<section data-background-image="images/20181005_fbk/monaci_websiteLettera.png" data-background-size="contain">
 				</section>
 
@@ -248,11 +251,10 @@
 				</section>	
 
 				<section data-background-image="images/20181005_fbk/roud_genetic_yes2.png" data-background-size="contain">
-				</section>	
+				</section>
 
-				<section data-background-image="images/20181005_fbk/geneticStageStatistic.png" data-background-size="contain">
+				<section data-background-image="images/20181005_fbk/roud_geneticStageStatistic.png" data-background-size="contain">
 				</section>	
-
 
 				<section>
 					Gustave Roud, <i>Œuvres complètes</i>
@@ -284,42 +286,40 @@
 				</section>
 
 				<section>
-					<div class="quote">By "modeling" I mean the heuristic process of constructing and manipulating models; a "model" I take to be either a representation of something for purposes of study, or a design for realizing something new.</div>
-					<br/><br/>
-					<div class="source">Willard McCarty, ‘Modeling: A Study in Words and Meanings’, <br/>in <i>A Companion to Digital Humanities</i>, 2004</div>
-				</section>
-
-				<section>
 					<i>Il ruolo del modello nella scienza e nel sapere (Roma, 27-28 ottobre 1998)</i>, Sergio Carrà (ed.), Accademia nazionale dei Lincei, Roma 1999.
-
 				</section>
 
 				<section>
-					<div class="quote">Un modello ... consiste nella <b>specificazione formale</b> delle proprietà astratte degli oggetti rappresentati, insieme con le <b>operazioni</b> definibili su tali elementi e le <b>restrizioni</b> che si applicano alle diverse classi di oggetti</div>
-					<br/><br/>
-					<div class="quote">i requisiti fondamentali per garantirne [alla rappresentazione digitale del testo] l'adegualezza funzionale debbono essere assicurati dalla definizione di un modello di dati in grado di <b>formalizzare i procedimenti analitici e critici</b> applicabili allo studio del testo</div>
-					<br/><br/>
+					<div class="quote"><b>Un modello [...] consiste nella specificazione formale delle proprietà astratte degli oggetti rappresentati, insieme con le operazioni definibili su tali elementi</b> e le restrizioni che si applicano alle diverse classi di oggetti</div>
+					<br/>
+					<div class="quote">i requisiti fondamentali per garantirne [alla rappresentazione digitale del testo] l'adegualezza funzionale debbono essere assicurati dalla definizione di <b>un modello di dati in grado di formalizzare i procedimenti analitici e critici applicabili allo studio del testo</b></div>
+					<br/>
 					<div class="source">Dino Buzzetti, “Rappresentazione digitale e modello del testo”</div>
 				</section>
 
 				<section>
-					<div class="quote">Ho avuto l'impressione che con il termine modello persone diverse intendano cose anche molto diverse.</div>
+					<div class="quote"><b>I modelli [...] rappresentano costrutti dotati di un significato più circoscritto di quello delle leggi e delle teorie scientifiche e hanno una connotazione strumentalistica. In altri termini, si suole ritenere che il modello non abbia portata generale, ma limitata a un contesto, e possa essere giudicato «buono» quando si rivela utile a scopi precisi (descrittivi, esplicativi o previsionali) non necessariamente quando lo si ritiene «vero».</b></div>
+					<br/>
+					<div class="source">Maria Carla Galavotti, “Leggi, modelli causali e manipolabilità”</div>
+				</section>
 
-					<div class="quote">Nelle scienze esatte (ma nel seguito, data la mia formazione, mi limiterô alla fisica) il modello non è una semplificazione delle realtà, ma una <b>libera posizione mentale</b> e, come tale, non osservabile nel laboratorio, che permette di unificare tra di loro e quindi di dare un significato a tutte le misure fatte nel laboratorio, e che permette previsioni per ulteriori misure.</div>
-					<br/><br/>
-					<div class="quote">io penso che il modello sia quella posizione mentale che resta <b>fuori dalla scena osservata</b>, ma che ha la funzione di integrare tra di loro e quindi di <b>rendere comprensibili</b> i fatti che si osservano dentro alla scena. Il modello può giungere ad essere l'<b>elemento invisibile che rende visibile il mondo</b>.</div>
-					<br/><br/>
+				<section>
+					<div class="quote">Nelle scienze esatte [...] il modello non è una semplificazione della realtà, ma una libera posizione mentale e, come tale, non osservabile nel laboratorio, che permette di unificare tra di loro e quindi di dare un significato a tutte le misure fatte nel laboratorio, e che permette previsioni per ulteriori misure.</div>
+					<br/>
+					<div class="quote"><b>io penso che il modello sia quella posizione mentale che resta fuori dalla scena osservata, ma che ha la funzione di integrare tra di loro e quindi di rendere comprensibili i fatti che si osservano dentro alla scena. Il modello può giungere ad essere l'elemento invisibile che rende visibile il mondo</b>.</div>
+					<br/>
 					<div class="source">Giorgio Careri, “Intervento”</div>
 				</section>
 
 				<section>
-					<div class="quote">Del ruolo dei modelli nella scienza rende invece adeguatamente conto il modello analitico. Ciò dipende dal fatto che formulare un modello di certi fenomeni equivale a <b>formulare un'ipotesi</b> su quei fenomeni, e la formulazione del modello avviene in base a quegli stessi procedimenti logici, quali l'induzione e l'analogia, che il modello analitico pone alla base della formulazione delle ipotesi.</div>
+					<div class="quote">Del ruolo dei modelli nella scienza rende invece adeguatamente conto il modello analitico. Ciò dipende dal fatto che <b>formulare un modello di certi fenomeni equivale a formulare un'ipotesi su quei fenomeni</b>, e la formulazione del modello avviene in base a quegli stessi procedimenti logici, quali l'induzione e l'analogia, che il modello analitico pone alla base della formulazione delle ipotesi.</div>
 					<br/><br/>
-					<div class="source">Carlo Cellucci</div>
+					<div class="source">Carlo Cellucci, “I modelli, l'analogia e la metafora”</div>
 				</section>
 
 				<section>
-					<img width="80%" src="images/20181005_fbk/cummings2017_ItHasMovingParts_slide1.jpg">
+					<img width="70%" src="images/20181005_fbk/cummings2017_ItHasMovingParts_slide1.jpg">
+					<p style="font-size: 0.8em">http://dixit.uni-koeln.de/programme/materials/</p>
 				</section>
 
 				<section>
@@ -356,10 +356,9 @@
 				<section>
 					<h4>Selected bibliography</h4>
 					<ul style="font-size: 0.5em">
-						<li>Black, Max. 1962. <i>Models and Metaphors; Studies in Language and Philosophy</i>. Ithaca, N.Y.: Cornell University Press.</li>
 						<li>Carrà, Sergio, ed. 1999. <i>Il ruolo del modello nella scienza e nel sapere (Roma, 27-28 ottobre 1998)</i>. Roma: Accademia nazionale dei Lincei.</li>
 						<li>Ciula, Arianna, and Øyvind Eide. 2017. ‘Modelling in Digital Humanities: Signs in Context’. Digital Scholarship in the Humanities 32 (suppl_1): i33–46.</li>
-						<li>Eide, Øyvind. 2014. ‘Ontologies, Data Modeling, and TEI’. Journal of the Text Encoding Initiative, no. Issue 8-PREVIEW (December).</li>
+						<li>Eide, Øyvind. 2014. ‘Ontologies, Data Modeling, and TEI’. Journal of the Text Encoding Initiative, no. Issue 8 (December).</li>
 						<li>Flanders, Julia, and Fotis Jannidis. 2015. ‘Knowledge Organization and Data Modeling in the Humanities’. In . http://www.wwp.northeastern.edu/outreach/conference/kodm2012/index.html.</li>
 						<li>———. 2016. ‘Data Modeling’. In <i>A New Companion to Digital Humanities</i>, edited by Susan Schreibman, Ray Siemens, and John Unsworth, 229–37. Wiley-Blackwell.</li>
 						<li>McCarty, Willard. 2004. ‘Modeling: A Study in Words and Meanings’. In <i>A Companion to Digital Humanities</i>, edited by Susan Schreibman, Ray Siemens, and John Unsworth. Oxford: Blackwell. </li>
