talk unil genetique in progress

--- a/talks/20181025UNIL_master_genetique.html
+++ b/talks/20181025UNIL_master_genetique.html
@@ -38,6 +38,22 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+
+
+<!-- ==================================================================================================  -->
+<!-- ==================================================================================================  -->
+<!-- ==================================================================================================  -->
+<!-- ==================================================================================================  -->
+<!-- ==================================================================================================  -->
+<!--                                                                                                     -->
+<!-- Attenzione, i materiali per questa presentazione sono inside Talks/jupyter notebook e in Talks/materials -->
+<!--                                                                                                     -->
+<!-- ==================================================================================================  -->
+<!-- ==================================================================================================  -->
+<!-- ==================================================================================================  -->
+<!-- ==================================================================================================  -->
+<!-- ==================================================================================================  -->
+
 							
 				
 				<section>
@@ -58,9 +74,6 @@
 				</section>
 
 
-<!-- ==================================================================================================  -->
-<!-- 										SECTION 1                                                    -->
-<!-- ==================================================================================================  -->
 
 				<section>
 					<h3>Outils de collation</h3>
