--- a/talks/20181025UNIL_master_genetique.html
+++ b/talks/20181025UNIL_master_genetique.html
@@ -133,21 +133,41 @@
 					<img style="border: none" src="images/20181025UNIL_master_genetique/focus3.png"/>
 				</section>
 
+				<section>
+					<img src="images/20181005_fbk/DHprojectComponents.png">
+					<br/><br/>
+					<div class="source"><i>Intro to Digital Humanities. <a href="http://dh101.humanities.ucla.edu/?page_id=15" target="_blank">1B: Analysis of DH projects</a></i>. Johanna Drucker, UCLA</div>
+				</section>
+
+				<section>
+					<img src="images/20181005_fbk/DHprojectComponents_highlighted.png">
+					<div class="source"><i>Intro to Digital Humanities. <a href="http://dh101.humanities.ucla.edu/?page_id=15" target="_blank">1B: Analysis of DH projects</a></i>. Johanna Drucker, UCLA</div>
+				</section>
+
+				<section data-background-image="images/20181005_fbk/magazzino1.png" data-background-size="contain">
+				</section>
+
+				<section data-background-image="images/20181005_fbk/magazzino2.png" data-background-size="contain">
+				</section>
+
+				<section data-background-image="images/20181025UNIL_master_genetique/magazzino3_fr.png" data-background-size="contain">
+				</section>
+
+				<section>
+					<img src="images/20181025UNIL_master_genetique/DHprojectComponents_magazzino_fr.png">
+				</section>
+
 				<section data-background-image="images/20181025UNIL_master_genetique/roud_materiali_fr.png" data-background-size="contain">
 				</section>	
 
 				<section>
-					1. <img src="images/20181005_fbk/roud_genetic_no.png" />
-					2. <img src="images/20181005_fbk/roud_genetic_yes.png" />
+					1. <img src="images/20181025UNIL_master_genetique/roud_genetic_no_fr.png" />
+					2. <img src="images/20181025UNIL_master_genetique/roud_genetic_yes_fr.png" />
 				</section>	
 
 				<section data-background-image="images/20181005_fbk/roud_genetic_yes2.png" data-background-size="contain">
 				</section>
 
-				<section data-background-image="images/20181005_fbk/roud_ontoCompleta.png" data-background-size="contain">
-				</section>				
-
-				
 				<section data-background-image="images/20181005_fbk/roud_geneticStageStatistic.png" data-background-size="contain">
 				</section>	
 
