presentation unil master genetic in progress

--- a/talks/20181025UNIL_master_genetique.html
+++ b/talks/20181025UNIL_master_genetique.html
@@ -168,8 +168,19 @@
 				<section data-background-image="images/20181005_fbk/roud_genetic_yes2.png" data-background-size="contain">
 				</section>
 
-				<section data-background-image="images/20181005_fbk/roud_geneticStageStatistic.png" data-background-size="contain">
+				<section> 
+					<img src="images/20181025UNIL_master_genetique/roud_statistics.png"/>
 				</section>	
+
+				<section>
+					Table des matières
+					<br/><br/>
+					<ol>
+						<li>Encodage <span style="color:grey">[XML/TEI]</span></li>
+						<li>Comparaison <span style="color:grey">[algorithmes d'alignement]</span></li>
+						<li>Réseau <span style="color:grey">[OWL/RDF]</span></li>
+					</ul>
+				</section>
 
 				
 
