unil master genetic in progress

--- a/talks/20181025UNIL_master_genetique.html
+++ b/talks/20181025UNIL_master_genetique.html
@@ -165,8 +165,14 @@
 					2. <img src="images/20181025UNIL_master_genetique/roud_genetic_yes_fr.png" />
 				</section>	
 
-				<section data-background-image="images/20181005_fbk/roud_genetic_yes2.png" data-background-size="contain">
+				<section>
+					<img src="images/20181025UNIL_master_genetique/roud_genetic_cendre.png">
 				</section>
+
+				<section>
+					<img src="images/20181025UNIL_master_genetique/roud_genetic_dunRequiem.png">
+				</section>
+
 
 				<section> 
 					<img src="images/20181025UNIL_master_genetique/roud_statistics.png"/>
@@ -180,6 +186,31 @@
 						<li>Comparaison <span style="color:grey">[algorithmes d'alignement]</span></li>
 						<li>Réseau <span style="color:grey">[OWL/RDF]</span></li>
 					</ul>
+				</section>
+
+				<section>
+					
+					Editions du Journal de Roud :
+					<ul>
+						<li>Roud, Gustave, <i>Journal</i>, éd. Philippe Jaccottet, Vevey, Bertil Galland, 1982.</li>
+						<li>Roud, Gustave, <i>Journal, Carnets, cahiers et feuillets, 1916-1971</i>, éd. Anne-Lise Delacrétaz et Claire Jaquier, Moudon, Editions Empreintes, 2004.</li>
+					</ul>
+
+					Critique génétique :
+					<ul>
+						<li>Biasi, Pierre-Marc de, <i>Génétique des textes</i>, Paris, CNRS, « Biblis », 2011.</li>
+						<li>Lejeune, Philippe, « Le journal : genèse d’une pratique », <i>Genesis</i> [En ligne], 32 | 2011. <a href="http://journals.openedition.org/genesis/310">http://journals.openedition.org/genesis/310</a></li>
+						<li>Mahrer, Rudolf, « La plume après le plomb », <i>Genesis</i> [En ligne], 44 | 2017. <a href="http://journals.openedition.org/genesis/1731">http://journals.openedition.org/genesis/1731</a></li>
+						<li>Simonet-Tenant, Françoise, « Le journal personnel comme pièce du dossier génétique », Genesis [En ligne], 32 | 2011. <a href="http://journals.openedition.org/genesis/425">http://journals.openedition.org/genesis/425</a></li>
+					</ul>
+
+					Éditions numériques et g bibliographiques
+					<ul>
+						<li>TEI - Text Encoding Initiative </li>
+
+
+
+
 				</section>
 
 				
