unil master genetique

--- a/talks/20181025UNIL_master_genetique.html
+++ b/talks/20181025UNIL_master_genetique.html
@@ -190,24 +190,29 @@
 
 				<section>
 					
-					Editions du Journal de Roud :
-					<ul>
-						<li>Roud, Gustave, <i>Journal</i>, éd. Philippe Jaccottet, Vevey, Bertil Galland, 1982.</li>
-						<li>Roud, Gustave, <i>Journal, Carnets, cahiers et feuillets, 1916-1971</i>, éd. Anne-Lise Delacrétaz et Claire Jaquier, Moudon, Editions Empreintes, 2004.</li>
-					</ul>
+					<div style="font-size: 0.65em;text-align: left">
+						<b>Editions du Journal de Roud :</b>
+						<ul>
+							<li>Roud, Gustave, <i>Journal</i>, éd. Philippe Jaccottet, Vevey, Bertil Galland, 1982.</li>
+							<li>Roud, Gustave, <i>Journal, Carnets, cahiers et feuillets, 1916-1971</i>, éd. Anne-Lise Delacrétaz et Claire Jaquier, Moudon, Editions Empreintes, 2004.</li>
+						</ul>
 
-					Critique génétique :
-					<ul>
-						<li>Biasi, Pierre-Marc de, <i>Génétique des textes</i>, Paris, CNRS, « Biblis », 2011.</li>
-						<li>Lejeune, Philippe, « Le journal : genèse d’une pratique », <i>Genesis</i> [En ligne], 32 | 2011. <a href="http://journals.openedition.org/genesis/310">http://journals.openedition.org/genesis/310</a></li>
-						<li>Mahrer, Rudolf, « La plume après le plomb », <i>Genesis</i> [En ligne], 44 | 2017. <a href="http://journals.openedition.org/genesis/1731">http://journals.openedition.org/genesis/1731</a></li>
-						<li>Simonet-Tenant, Françoise, « Le journal personnel comme pièce du dossier génétique », Genesis [En ligne], 32 | 2011. <a href="http://journals.openedition.org/genesis/425">http://journals.openedition.org/genesis/425</a></li>
-					</ul>
+						<b>Critique génétique :</b>
+						<ul>
+							<li>Biasi, Pierre-Marc de, <i>Génétique des textes</i>, Paris, CNRS, « Biblis », 2011.</li>
+							<li>Lejeune, Philippe, « Le journal : genèse d’une pratique », <i>Genesis</i> [En ligne], 32 | 2011. <a href="http://journals.openedition.org/genesis/310">journals.openedition.org/genesis/310</a></li>
+							<li>Mahrer, Rudolf, « La plume après le plomb », <i>Genesis</i> [En ligne], 44 | 2017. <a href="http://journals.openedition.org/genesis/1731">journals.openedition.org/genesis/1731</a></li>
+							<li>Simonet-Tenant, Françoise, « Le journal personnel comme pièce du dossier génétique », Genesis [En ligne], 32 | 2011. <a href="http://journals.openedition.org/genesis/425">journals.openedition.org/genesis/425</a></li>
+						</ul>
 
-					Éditions numériques et g bibliographiques
-					<ul>
-						<li>TEI - Text Encoding Initiative </li>
-
+						<b>Éditions numériques et g bibliographiques :</b>
+						<ul>
+							<li>TEI - Text Encoding Initiative <a href="http://tei-c.org/">tei-c.org/</a></li>
+							<li>CollateX <a href="http://collatex.net/">collatex.net/</a></li>
+							<li>Catalogue of Digital Editions <a href="https://dig-ed-cat.acdh.oeaw.ac.at/">dig-ed-cat.acdh.oeaw.ac.at/</a></li>
+							<li>a catalog of Digital Scholarly Editions <a href="http://www.digitale-edition.de/">www.digitale-edition.de/</a></li>
+						</ul>
+					</div>
 
 
 
