--- a/talks/20181025UNIL_master_genetique.html
+++ b/talks/20181025UNIL_master_genetique.html
@@ -62,7 +62,9 @@
 					<div style="font-size: 0.85em">
 					UNIL (Master Histoire du livre et &#233;dition des textes), 25.10.2018
 					<br/>
-					Projet « Gustave Roud, <i>Œuvres compl&#232;tes</i> » - Elena Spadini</div>
+					Projet « Gustave Roud, <i>Œuvres compl&#232;tes</i> » - Elena Spadini
+					<br/><br/>
+					<span style="text-decoration: underline; text-decoration-color: yellow">En ligne: <i>http://small.cat/fog</i></span></div>
 				</section>
 
 
@@ -205,7 +207,7 @@
 							<li>Simonet-Tenant, Françoise, « Le journal personnel comme pièce du dossier génétique », Genesis [En ligne], 32 | 2011. <a href="http://journals.openedition.org/genesis/425">journals.openedition.org/genesis/425</a></li>
 						</ul>
 
-						<b>Éditions numériques et g bibliographiques :</b>
+						<b>Éditions numériques et génétiques :</b>
 						<ul>
 							<li>TEI - Text Encoding Initiative <a href="http://tei-c.org/">tei-c.org/</a></li>
 							<li>CollateX <a href="http://collatex.net/">collatex.net/</a></li>
