--- a/talks/materials/20181112_ecdotica_digitale/FR_example1_0.html
+++ b/talks/materials/20181112_ecdotica_digitale/FR_example1_0.html
@@ -7,14 +7,16 @@
     <title>Ecdotica Digitale</title>
 
     <style type="text/css">
-      table {margin: 5% 30%}
-      body {font-size: 1.5em};
+      table {margin: 2% 35%}
+      body {font-size: 1.3em};
     </style>
     
   </head>
   <body>
     <div>
 
+<div style="text-align: center;margin-top:50px"><h3>VARIANTI DI FORMA E DI SOSTANZA (ESEMPIO 2)</h3></div>
+    
 <TABLE border="1" style="border: 1px solid #000000; border-collapse: collapse;" cellpadding="15">
  <TR>
   <TH>W1</TH>
